// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/webpack.js should accept an existing processor instance 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/specimens/simple.css\\":
/*!****************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/simple.css ***!
  \\\\****************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"wooga\\": () => (/* binding */ wooga)
/* harmony export */ });
const wooga = \\"mc8d99986b_wooga\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    wooga
});


const styles = \\".mc8d99986b_wooga { color: red; }\\\\n\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/simple.js ***!
  \\\\***************************************************/
__webpack_require__(/*! ./simple.css */ \\"./packages/webpack/test/specimens/simple.css\\");

})();

/******/ })()
;"
`;

exports[`/webpack.js should accept an existing processor instance 2`] = `
"/* packages/webpack/test/specimens/fake.css */
.mc89f5ebd2_fake {
    color: yellow;
}
/* packages/webpack/test/specimens/simple.css */
.mc8d99986b_wooga { color: red; }"
`;

exports[`/webpack.js should generate correct builds in watch mode when files change 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/output/watched.css\\":
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/output/watched.css ***!
  \\\\**************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"one\\": () => (/* binding */ one),
/* harmony export */   \\"styles\\": () => (/* binding */ styles)
/* harmony export */ });
const one = \\"mc_one\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    one
});


const styles = \\".mc_one { color: red; }\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/watch.js ***!
  \\\\**************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _output_watched_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ../output/watched.css */ \\"./packages/webpack/test/output/watched.css\\");


console.log(_output_watched_css__WEBPACK_IMPORTED_MODULE_0__[\\"default\\"]);

})();

/******/ })()
;"
`;

exports[`/webpack.js should generate correct builds in watch mode when files change 2`] = `
"/* packages/webpack/test/output/watched.css */
.mc_one { color: red; }"
`;

exports[`/webpack.js should generate correct builds in watch mode when files change 3`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/output/watched.css\\":
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/output/watched.css ***!
  \\\\**************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"two\\": () => (/* binding */ two)
/* harmony export */ });
const two = \\"mc_two\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    two
});


const styles = \\".mc_two { color: blue; }\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/watch.js ***!
  \\\\**************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _output_watched_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ../output/watched.css */ \\"./packages/webpack/test/output/watched.css\\");


console.log(_output_watched_css__WEBPACK_IMPORTED_MODULE_0__[\\"default\\"]);

})();

/******/ })()
;"
`;

exports[`/webpack.js should generate correct builds in watch mode when files change 4`] = `
"/* packages/webpack/test/output/watched.css */
.mc_two { color: blue; }"
`;

exports[`/webpack.js should generate correct builds when files change 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/output/changed.css\\":
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/output/changed.css ***!
  \\\\**************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"one\\": () => (/* binding */ one),
/* harmony export */   \\"styles\\": () => (/* binding */ styles)
/* harmony export */ });
const one = \\"mc_one\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    one
});


var styles = \\".mc_one { color: red; }\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/change.js ***!
  \\\\***************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _output_changed_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ../output/changed.css */ \\"./packages/webpack/test/output/changed.css\\");


console.log(_output_changed_css__WEBPACK_IMPORTED_MODULE_0__[\\"default\\"]);

})();

/******/ })()
;"
`;

exports[`/webpack.js should generate correct builds when files change 2`] = `
"/* packages/webpack/test/output/changed.css */
.mc_one { color: red; }"
`;

exports[`/webpack.js should generate correct builds when files change 3`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/output/changed.css\\":
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/output/changed.css ***!
  \\\\**************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"two\\": () => (/* binding */ two)
/* harmony export */ });
const two = \\"mc_two\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    two
});


var styles = \\".mc_two { color: blue; }\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/change.js ***!
  \\\\***************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _output_changed_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ../output/changed.css */ \\"./packages/webpack/test/output/changed.css\\");


console.log(_output_changed_css__WEBPACK_IMPORTED_MODULE_0__[\\"default\\"]);

})();

/******/ })()
;"
`;

exports[`/webpack.js should generate correct builds when files change 4`] = `
"/* packages/webpack/test/output/changed.css */
.mc_two { color: blue; }"
`;

exports[`/webpack.js should generate correct builds when files change 5`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/output/changed.css\\":
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/output/changed.css ***!
  \\\\**************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"three\\": () => (/* binding */ three)
/* harmony export */ });
const three = \\"mc_three\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    three
});


var styles = \\".mc_three { color: green; }\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/change.js ***!
  \\\\***************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _output_changed_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ../output/changed.css */ \\"./packages/webpack/test/output/changed.css\\");


console.log(_output_changed_css__WEBPACK_IMPORTED_MODULE_0__[\\"default\\"]);

})();

/******/ })()
;"
`;

exports[`/webpack.js should generate correct builds when files change 6`] = `
"/* packages/webpack/test/output/changed.css */
.mc_three { color: green; }"
`;

exports[`/webpack.js should handle dependencies 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/specimens/folder/folder.css\\":
/*!***********************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/folder/folder.css ***!
  \\\\***********************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"$values\\": () => (/* binding */ $values),
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"folder\\": () => (/* binding */ folder1),
/* harmony export */   \\"styles\\": () => (/* binding */ styles)
/* harmony export */ });
const folder = \\"white\\"
const $values = {
    folder,
};
const folder1 = \\"mc_folder\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    $values,
\\"folder\\" : folder1
});


const styles = \\".mc_folder { margin: 2px; }\\\\n\\";

/***/ }),

/***/ \\"./packages/webpack/test/specimens/local.css\\":
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/local.css ***!
  \\\\***************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"$values\\": () => (/* binding */ $values),
/* harmony export */   \\"booga\\": () => (/* binding */ booga),
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"looga\\": () => (/* binding */ looga),
/* harmony export */   \\"styles\\": () => (/* binding */ styles)
/* harmony export */ });
/* harmony import */ var _folder_folder_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./folder/folder.css */ \\"./packages/webpack/test/specimens/folder/folder.css\\");

const one = \\"red\\"
const two = \\"blue\\"
const $values = {
    \\"folder\\" : _folder_folder_css__WEBPACK_IMPORTED_MODULE_0__.$values.folder,
one,
two,
};
const booga = \\"mc_booga\\"
const looga = booga + \\" \\" + \\"mc_looga\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    $values,
booga,
looga
});


const styles = \\".mc_booga { background: green; }\\\\n\\";

/***/ }),

/***/ \\"./packages/webpack/test/specimens/start.css\\":
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/start.css ***!
  \\\\***************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"$values\\": () => (/* binding */ $values),
/* harmony export */   \\"booga\\": () => (/* binding */ booga1),
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"tooga\\": () => (/* binding */ tooga),
/* harmony export */   \\"wooga\\": () => (/* binding */ wooga)
/* harmony export */ });
/* harmony import */ var _local_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./local.css */ \\"./packages/webpack/test/specimens/local.css\\");

const $values = {
    \\"one\\" : _local_css__WEBPACK_IMPORTED_MODULE_0__.$values.one,
\\"two\\" : _local_css__WEBPACK_IMPORTED_MODULE_0__.$values.two,
\\"folder\\" : _local_css__WEBPACK_IMPORTED_MODULE_0__.$values.folder,
};
const wooga = _local_css__WEBPACK_IMPORTED_MODULE_0__.booga + \\" \\" + \\"mc_wooga\\"
const booga1 = \\"mc_booga\\"
const tooga = \\"mc_tooga\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    $values,
wooga,
\\"booga\\" : booga1,
tooga
});


const styles = \\".mc_booga { color: red; background: blue; }\\\\n.mc_tooga { border: 1px solid white; }\\\\n\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!**************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/start.js ***!
  \\\\**************************************************/
__webpack_require__(/*! ./start.css */ \\"./packages/webpack/test/specimens/start.css\\");

})();

/******/ })()
;"
`;

exports[`/webpack.js should handle dependencies 2`] = `
"/* packages/webpack/test/specimens/folder/folder.css */
.mc_folder { margin: 2px; }
/* packages/webpack/test/specimens/local.css */
.mc_booga { background: green; }
/* packages/webpack/test/specimens/start.css */
.mc_booga { color: red; background: blue; }
.mc_tooga { border: 1px solid white; }
"
`;

exports[`/webpack.js should handle dependencies 3`] = `
"{
    \\"packages/webpack/test/specimens/folder/folder.css\\": {
        \\"folder\\": [
            \\"mc_folder\\"
        ]
    },
    \\"packages/webpack/test/specimens/local.css\\": {
        \\"booga\\": [
            \\"mc_booga\\"
        ],
        \\"looga\\": [
            \\"mc_booga\\",
            \\"mc_looga\\"
        ]
    },
    \\"packages/webpack/test/specimens/start.css\\": {
        \\"wooga\\": [
            \\"mc_booga\\",
            \\"mc_wooga\\"
        ],
        \\"booga\\": [
            \\"mc_booga\\"
        ],
        \\"tooga\\": [
            \\"mc_tooga\\"
        ]
    }
}"
`;

exports[`/webpack.js should output css to disk 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/specimens/simple.css\\":
/*!****************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/simple.css ***!
  \\\\****************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"wooga\\": () => (/* binding */ wooga)
/* harmony export */ });
const wooga = \\"mc_wooga\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    wooga
});


const styles = \\".mc_wooga { color: red; }\\\\n\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/simple.js ***!
  \\\\***************************************************/
__webpack_require__(/*! ./simple.css */ \\"./packages/webpack/test/specimens/simple.css\\");

})();

/******/ })()
;"
`;

exports[`/webpack.js should output css to disk 2`] = `
"/* packages/webpack/test/specimens/simple.css */
.mc_wooga { color: red; }
"
`;

exports[`/webpack.js should output external source maps to disk 1`] = `"{\\"version\\":3,\\"sources\\":[\\"packages/webpack/test/specimens/simple.css\\"],\\"names\\":[],\\"mappings\\":\\"AAAA,+CAAA;AAAA,YAAS,UAAU,EAAE\\",\\"file\\":\\"output.css\\",\\"sourcesContent\\":[\\".wooga { color: red; }\\\\n\\"]}"`;

exports[`/webpack.js should output inline source maps 1`] = `
"/* packages/webpack/test/specimens/simple.css */
.mc_wooga { color: red; }

/*# sourceMappingURL=data:application/json;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbInBhY2thZ2VzL3dlYnBhY2svdGVzdC9zcGVjaW1lbnMvc2ltcGxlLmNzcyJdLCJuYW1lcyI6W10sIm1hcHBpbmdzIjoiQUFBQSwrQ0FBQTtBQUFBLFlBQVMsVUFBVSxFQUFFIiwiZmlsZSI6Im91dHB1dC5jc3MiLCJzb3VyY2VzQ29udGVudCI6WyIud29vZ2EgeyBjb2xvcjogcmVkOyB9XG4iXX0= */"
`;

exports[`/webpack.js should output json to disk 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/specimens/simple.css\\":
/*!****************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/simple.css ***!
  \\\\****************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

\\"use strict\\";
__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles),
/* harmony export */   \\"wooga\\": () => (/* binding */ wooga)
/* harmony export */ });
const wooga = \\"mc_wooga\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    wooga
});


const styles = \\".mc_wooga { color: red; }\\\\n\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/simple.js ***!
  \\\\***************************************************/
__webpack_require__(/*! ./simple.css */ \\"./packages/webpack/test/specimens/simple.css\\");

})();

/******/ })()
;"
`;

exports[`/webpack.js should output json to disk 2`] = `
"{
    \\"packages/webpack/test/specimens/simple.css\\": {
        \\"wooga\\": [
            \\"mc_wooga\\"
        ]
    }
}"
`;

exports[`/webpack.js should support ES2015 default exports 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/specimens/es2015.css\\":
/*!****************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/es2015.css ***!
  \\\\****************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"$values\\": () => (/* binding */ $values),
/* harmony export */   \\"a\\": () => (/* binding */ a),
/* harmony export */   \\"b\\": () => (/* binding */ b),
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles)
/* harmony export */ });
const val = \\"\\\\\\"value\\\\\\"\\"
const $values = {
    val,
};
const a = \\"mc_a\\"
const b = \\"mc_b\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    $values,
a,
b
});


const styles = \\".mc_a { color: red; }\\\\n.mc_b { color: blue; }\\\\n\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!***********************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/es2015-default.js ***!
  \\\\***********************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _es2015_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./es2015.css */ \\"./packages/webpack/test/specimens/es2015.css\\");


console.log(_es2015_css__WEBPACK_IMPORTED_MODULE_0__[\\"default\\"]);

})();

/******/ })()
;"
`;

exports[`/webpack.js should support ES2015 default exports 2`] = `
"/* packages/webpack/test/specimens/es2015.css */
.mc_a { color: red; }
.mc_b { color: blue; }
"
`;

exports[`/webpack.js should support ES2015 named exports 1`] = `
"/******/ (() => { // webpackBootstrap
/******/ 	\\"use strict\\";
/******/ 	var __webpack_modules__ = ({

/***/ \\"./packages/webpack/test/specimens/es2015.css\\":
/*!****************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/es2015.css ***!
  \\\\****************************************************/
/***/ ((__unused_webpack_module, __webpack_exports__, __webpack_require__) => {

__webpack_require__.r(__webpack_exports__);
/* harmony export */ __webpack_require__.d(__webpack_exports__, {
/* harmony export */   \\"$values\\": () => (/* binding */ $values),
/* harmony export */   \\"a\\": () => (/* binding */ a),
/* harmony export */   \\"b\\": () => (/* binding */ b),
/* harmony export */   \\"default\\": () => (__WEBPACK_DEFAULT_EXPORT__),
/* harmony export */   \\"styles\\": () => (/* binding */ styles)
/* harmony export */ });
const val = \\"\\\\\\"value\\\\\\"\\"
const $values = {
    val,
};
const a = \\"mc_a\\"
const b = \\"mc_b\\"
/* harmony default export */ const __WEBPACK_DEFAULT_EXPORT__ = ({
    $values,
a,
b
});


const styles = \\".mc_a { color: red; }\\\\n.mc_b { color: blue; }\\\\n\\";

/***/ })

/******/ 	});
/************************************************************************/
/******/ 	// The module cache
/******/ 	var __webpack_module_cache__ = {};
/******/ 	
/******/ 	// The require function
/******/ 	function __webpack_require__(moduleId) {
/******/ 		// Check if module is in cache
/******/ 		var cachedModule = __webpack_module_cache__[moduleId];
/******/ 		if (cachedModule !== undefined) {
/******/ 			return cachedModule.exports;
/******/ 		}
/******/ 		// Create a new module (and put it into the cache)
/******/ 		var module = __webpack_module_cache__[moduleId] = {
/******/ 			// no module.id needed
/******/ 			// no module.loaded needed
/******/ 			exports: {}
/******/ 		};
/******/ 	
/******/ 		// Execute the module function
/******/ 		__webpack_modules__[moduleId](module, module.exports, __webpack_require__);
/******/ 	
/******/ 		// Return the exports of the module
/******/ 		return module.exports;
/******/ 	}
/******/ 	
/************************************************************************/
/******/ 	/* webpack/runtime/define property getters */
/******/ 	(() => {
/******/ 		// define getter functions for harmony exports
/******/ 		__webpack_require__.d = (exports, definition) => {
/******/ 			for(var key in definition) {
/******/ 				if(__webpack_require__.o(definition, key) && !__webpack_require__.o(exports, key)) {
/******/ 					Object.defineProperty(exports, key, { enumerable: true, get: definition[key] });
/******/ 				}
/******/ 			}
/******/ 		};
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/hasOwnProperty shorthand */
/******/ 	(() => {
/******/ 		__webpack_require__.o = (obj, prop) => (Object.prototype.hasOwnProperty.call(obj, prop))
/******/ 	})();
/******/ 	
/******/ 	/* webpack/runtime/make namespace object */
/******/ 	(() => {
/******/ 		// define __esModule on exports
/******/ 		__webpack_require__.r = (exports) => {
/******/ 			if(typeof Symbol !== 'undefined' && Symbol.toStringTag) {
/******/ 				Object.defineProperty(exports, Symbol.toStringTag, { value: 'Module' });
/******/ 			}
/******/ 			Object.defineProperty(exports, '__esModule', { value: true });
/******/ 		};
/******/ 	})();
/******/ 	
/************************************************************************/
var __webpack_exports__ = {};
// This entry need to be wrapped in an IIFE because it need to be isolated against other modules in the chunk.
(() => {
/*!*********************************************************!*\\\\
  !*** ./packages/webpack/test/specimens/es2015-named.js ***!
  \\\\*********************************************************/
__webpack_require__.r(__webpack_exports__);
/* harmony import */ var _es2015_css__WEBPACK_IMPORTED_MODULE_0__ = __webpack_require__(/*! ./es2015.css */ \\"./packages/webpack/test/specimens/es2015.css\\");


console.log(_es2015_css__WEBPACK_IMPORTED_MODULE_0__.a, _es2015_css__WEBPACK_IMPORTED_MODULE_0__.val);

})();

/******/ })()
;"
`;

exports[`/webpack.js should support ES2015 named exports 2`] = `
"/* packages/webpack/test/specimens/es2015.css */
.mc_a { color: red; }
.mc_b { color: blue; }
"
`;
